Deny all illegal accesses in Gradle daemon